Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,42 +1,34 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/github-dark.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
 
-  <title>Sleeti</title>
-  <meta name="description" content="A port of eeti.me, a pomf clone, to Slim 3">
+    <title>Sleeti by BytewaveMLP</title>
+  </head>
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <body>
 
-</head>
-
-<body>
-
-  <div class="wrapper">
     <header>
-      <h1 class="title">Sleeti</h1>
+      <div class="container">
+        <h1>Sleeti</h1>
+        <h2>A port of eeti.me, a pomf clone, to Slim 3</h2>
+
+        <section id="downloads">
+          <a href="https://github.com/BytewaveMLP/sleeti/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/BytewaveMLP/sleeti/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/BytewaveMLP/sleeti" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
     </header>
-    <div id="container">
-      <p class="tagline">A port of eeti.me, a pomf clone, to Slim 3</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/BytewaveMLP/sleeti/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/BytewaveMLP/sleeti/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/BytewaveMLP/sleeti" class="code">View Sleeti on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>
+
+    <div class="container">
+      <section id="main_content">
+        <h1>
 <a id="sleeti" class="anchor" href="#sleeti" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>sleeti</h1>
 
 <p>A proof-of-concept port of eeti.me to Slim 3</p>
@@ -73,26 +65,9 @@
 <li>Fill out fields</li>
 <li>Enjoy!</li>
 </ul>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/BytewaveMLP" class="avatar"><img src="https://avatars2.githubusercontent.com/u/5623770?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/BytewaveMLP">BytewaveMLP</a> maintains <a href="https://github.com/BytewaveMLP/sleeti">Sleeti</a></p>
 
-
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/BytewaveMLP/sleeti/tarball/master" class="tar">tar</a><a href="https://github.com/BytewaveMLP/sleeti/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
-
-  
-</body>
+    
+  </body>
 </html>
